# nix-templates

./: README.md  flake.nix
haskell/: .envrc  .gitignore  PROJECT.cabal  flake.nix
haskell/src/: Main.hs
python/: flake.nix
simple/: flake.nix
